# Bitwuzla-BV_Parti-at-SMT-COMP-2026

./: .gitignore  README.md
solver/: control_message.py  run_BV_Parti.py
src/: BV-Parti_launcher.py  coordinator.py  dispatcher.py  leader.py  partition_tree.py
src/partitioner/include/bitwuzla/: option.h
src/partitioner/src/: meson.build  terminator.h
src/partitioner/src/api/: checks.h
src/partitioner/src/api/cpp/: bitwuzla.cpp
src/partitioner/src/option/: option.cpp  option.h
src/partitioner/src/preprocess/: preprocessor.cpp  preprocessor.h
src/partitioner/src/preprocess/pass/feasible_domain_propagator/: fdp_prefix_array.cpp  fdp_prefix_array.h  fdp_utility.cpp  fdp_utility.h  feasible_domain.cpp  feasible_domain.h  operator_statistics.h  partition_task_builder.cpp  partition_task_builder.h  propagator.cpp  propagator.h
src/partitioner/src/preprocess/pass/feasible_domain_propagator/operator_dispatch/: fdp_arithmetic.cpp  fdp_arithmetic.h  fdp_base.cpp  fdp_base.h  fdp_boolean.cpp  fdp_boolean.h  fdp_comparison.cpp  fdp_comparison.h  fdp_composition.cpp  fdp_composition.h  fdp_division.cpp  fdp_division.h  fdp_dummy.cpp  fdp_dummy.h  fdp_ite.cpp  fdp_ite.h  fdp_multiplication.cpp  fdp_multiplication.h  fdp_shifting.cpp  fdp_shifting.h
src/partitioner/src/printer/: printer.cpp
src/partitioner/src/rewrite/: evaluator.h
src/partitioner/subprojects/: gtest.wrap
src/partitioner/subprojects/packagefiles/gtest/: meson.build
src/partitioner/test/unit/: meson.build
src/partitioner/test/unit/fdp/: fdp_manual_test.cpp  fdp_test_utils.h  feasible_domain_test.cpp  meson.build  operator_dispatch_test.cpp  operator_soundness_test.cpp  partition_task_test.cpp  pass_feasible_domain_propagator_test.cpp  test_preprocess_pass.h
test/instances/: bv-sat-0.01.smt2  bv-sat-0.98.smt2  bv-sat-60.59.smt2  bv-unsat-3.05.smt2  bv-unsat-7.40.smt2
